[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
eyre = "0.6.12"
frost-ed25519 = { path = "../frost-ed25519", features = ["serde"] }
frost-ed448 = { path = "../frost-ed448", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"
serde_json = "1.0"
itertools = "0.12.1"
exitcode = "1.1.2"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
message-io = "0.18"

[features]
ed448 = []
default = []
