[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
eyre = "0.6.12"
frost-core = { path = "../frost-core", features = ["serde"] }
frost-ed25519 = { path = "../frost-ed25519", features = ["serde"] }
frost-ed448 = { path = "../frost-ed448", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rand = "0.8"
serde_json = "1.0"
serdect = { version = "0.2.0" }
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
message-io = "0.18"

[features]
default = []
