[package]
name = "participant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
frost-ed25519 = { path = "../frost-ed25519", features = ["serde"] }
frost-ed448 = { path = "../frost-ed448", features = ["serde"] }
hex = "0.4"
rand = "0.8"
eyre = "0.6.12"
exitcode = "1.1.2"
serde_json = "1.0"
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
message-io = "0.18"

[features]
ed448 = []
default = []
