[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-core = { path = "../frost-core", features = ["serde"] }
frost-ed25519 = { path = "../frost-ed25519", features = ["serde"] }
frost-ed448 = { path = "../frost-ed448", features = ["serde"] }
hex = "0.4"
rand = "0.8"
exitcode = "1.1.2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dkg = { path = "../dkg"}
trusted-dealer = { path = "../trusted-dealer"}
participant = { path = "../participant"}
coordinator = { path = "../coordinator"}
rand = "0.8"

[features]
default = []
