[package]
name = "trusted-dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frost-ed25519 = { path = "../frost-ed25519", features = ["serde"] }
frost-ed448 = { path = "../frost-ed448", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
hex = "0.4"
itertools = "0.12.1"
exitcode = "1.1.2"
serde_json = "1.0"

[features]
ed448 = []
default = []

