[package]
name = "trusted-dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frost-core = { path = "../frost-core", features = ["serde"] }
frost-ed25519 = { path = "../frost-ed25519", features = ["serde"] }
frost-ed448 = { path = "../frost-ed448", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8"
hex = "0.4"
itertools = "0.13.0"
serde_json = "1.0"

[features]
default = []

